Make some code optimizations.

--- a/Notebooks/Analyzer_101.ipynb
+++ b/Notebooks/Analyzer_101.ipynb
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cMB8T39CuJ2Y",
-        "outputId": "2ef0c8e9-5507-4f89-aafb-564155e84c0d"
+        "outputId": "565d4ce9-d3ce-49df-b783-5469b62d9e5b"
       },
       "source": [
         "import numpy as np\n",
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "37JnfHgWt_-U",
-        "outputId": "e3afa634-c907-44c3-a84f-9ae77a29cf44"
+        "outputId": "25122664-1429-41b5-84d4-ebe827459090"
       },
       "source": [
         "PC_FILENAME='gencode.v38.pc_transcripts.fa.gz'\n",
@@ -192,7 +192,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ANtZknso53FT",
-        "outputId": "7ee2c05c-0968-4d3f-c6ba-0d8ee8163577"
+        "outputId": "8ae51155-d61a-4e40-c6a7-2b88ac49c9b1"
       },
       "source": [
         "if APPLY_SUBSET:\n",
@@ -233,7 +233,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D7pejW0g1lnR",
-        "outputId": "11c94ca1-a954-4508-c5e8-07d8ae310eca"
+        "outputId": "5ec9f214-ecde-4e89-9f7c-65ba9045329f"
       },
       "source": [
         "pc_sequences = pcdf['sequence'].tolist()\n",
@@ -339,7 +339,6 @@
         "tool.harvest_counts_from_K(fake_counts, MAX_K)\n",
         "fake_freqs = tool.count_to_frequency(fake_counts, MAX_K)\n",
         "\n",
-        "\n",
         "#Garbage collection\n",
         "pc_counts = None\n",
         "nc_counts = None\n",
@@ -349,81 +348,44 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Wc3GALLxBbx2"
-      },
-      "source": [
-        "This function takes a dictionary as a parameter. It checks the length of the key to determine if it is 1-mer, 2-mer or 3 mer and assign the values respectively. "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ApuWlBClBXpe"
-      },
-      "source": [
-        "def get_stats(dict):\n",
-        "  one_mer = []\n",
-        "  one_mer_key = []\n",
-        "  two_mer= []\n",
-        "  two_mer_key=[]\n",
-        "  three_mer= []\n",
-        "  three_mer_key=[]\n",
-        "  for sequence in enumerate(dict.items()):\n",
-        "    if(len(sequence[1][0])==1):\n",
-        "      one_mer.append(sequence[1][1])\n",
-        "      one_mer_key.append(sequence[1][0])\n",
-        "    if(len(sequence[1][0])==2):\n",
-        "      two_mer.append(sequence[1][1])\n",
-        "      two_mer_key.append(sequence[1][0])\n",
-        "    if(len(sequence[1][0])==3):\n",
-        "      three_mer.append(sequence[1][1])\n",
-        "      three_mer_key.append(sequence[1][0])\n",
-        "  return one_mer_key, one_mer, two_mer_key,two_mer, three_mer_key, three_mer"
-      ],
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "1Dz2OrqbBmgE"
       },
       "source": [
-        "#Gets the list  of 1-mer, 2-mer and 3-mer counts along with their key\n",
-        "#In the order of Key-Value. \n",
-        "pc_stats = get_stats(pc_freqs)\n",
-        "nc_stats = get_stats(nc_freqs)\n",
-        "fake_stats = get_stats(fake_freqs)\n",
+        "ONE_MER_MIN = 0\n",
+        "ONE_MER_MAX = 4**1\n",
+        "TWO_MER_MIN = 4**1\n",
+        "TWO_MER_MAX = 4**2 + 4**1\n",
+        "THREE_MER_MIN = 4**2 + 4**1\n",
+        "THREE_MER_MAX = 4**3 + 4**2 + 4**1\n",
         "\n",
-        "#1-mer\n",
-        "one_mer_pc = np.asarray(pc_stats[1])\n",
-        "one_mer_nc = np.asarray(nc_stats[1])\n",
-        "one_mer_fake = np.asarray(fake_stats[1])\n",
-        "#2-mer\n",
-        "two_mer_pc = np.asarray(pc_stats[3])\n",
-        "two_mer_nc = np.asarray(nc_stats[3])\n",
-        "two_mer_fake = np.asarray(fake_stats[3])\n",
-        "#3-mer\n",
-        "three_mer_pc = np.asarray(pc_stats[5])\n",
-        "three_mer_nc = np.asarray(nc_stats[5])\n",
-        "three_mer_fake = np.asarray(fake_stats[5])\n",
+        "one_mer_keys = list(pc_freqs.keys())[ONE_MER_MIN:ONE_MER_MAX]\n",
+        "two_mer_keys = list(pc_freqs.keys())[TWO_MER_MIN:TWO_MER_MAX]\n",
+        "three_mer_keys = list(pc_freqs.keys())[THREE_MER_MIN:THREE_MER_MAX]\n",
         "\n",
-        "#Keys that can be used as labels.\n",
-        "one_mer_keys = pc_stats[0]\n",
-        "two_mer_keys = pc_stats[2]\n",
-        "three_mer_keys = pc_stats[4]\n",
+        "pc_freqs = list(pc_freqs.values())\n",
+        "nc_freqs = list(nc_freqs.values())\n",
+        "fake_freqs = list(fake_freqs.values())\n",
+        "\n",
+        "one_mer_pc = np.asarray(pc_freqs[ONE_MER_MIN:ONE_MER_MAX])\n",
+        "one_mer_nc = np.asarray(nc_freqs[ONE_MER_MIN:ONE_MER_MAX])\n",
+        "one_mer_fake = np.asarray(fake_freqs[ONE_MER_MIN:ONE_MER_MAX])\n",
+        "\n",
+        "two_mer_pc = np.asarray(pc_freqs[TWO_MER_MIN:TWO_MER_MAX])\n",
+        "two_mer_nc = np.asarray(nc_freqs[TWO_MER_MIN:TWO_MER_MAX])\n",
+        "two_mer_fake = np.asarray(fake_freqs[TWO_MER_MIN:TWO_MER_MAX])\n",
+        "\n",
+        "three_mer_pc = np.asarray(pc_freqs[THREE_MER_MIN:THREE_MER_MAX])\n",
+        "three_mer_nc = np.asarray(nc_freqs[THREE_MER_MIN:THREE_MER_MAX])\n",
+        "three_mer_fake = np.asarray(fake_freqs[THREE_MER_MIN:THREE_MER_MAX])\n",
         "\n",
         "#Garbage collection\n",
         "pc_freqs = None\n",
         "nc_freqs = None\n",
-        "fake_freqs = None\n",
-        "pc_stats = None\n",
-        "nc_stats = None\n",
-        "fake_stats = None"
+        "fake_freqs = None"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -451,7 +413,7 @@
         "  oc.set_sequence(fake_sequences[i])\n",
         "  fake_max_orf_len[0][i] = oc.get_max_orf_len()"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -469,13 +431,12 @@
         "id": "w4LH8MEN7GKD"
       },
       "source": [
-        "pc_seq_len = []\n",
+        "pc_seq_len = np.zeros(len(pc_sequences))\n",
         "for i in range(len(pc_sequences)):\n",
-        "  pc_seq_len.append(len(pc_sequences[i]))\n",
-        "pc_seq_len = np.asarray(pc_seq_len)\n",
+        "  pc_seq_len[i] = len(pc_sequences[i])\n",
         "pc_seq_len_orf_len_corrcoef = np.corrcoef(pc_seq_len, pc_max_orf_len[0])"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -484,13 +445,12 @@
         "id": "i0pYce2tM8z9"
       },
       "source": [
-        "nc_seq_len = []\n",
+        "nc_seq_len = np.zeros(len(nc_sequences))\n",
         "for i in range(len(nc_sequences)):\n",
-        "  nc_seq_len.append(len(nc_sequences[i]))\n",
-        "nc_seq_len = np.asarray(nc_seq_len)\n",
+        "  nc_seq_len[i] = len(nc_sequences[i])\n",
         "nc_seq_len_orf_len_corrcoef = np.corrcoef(nc_seq_len, nc_max_orf_len[0])"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -499,13 +459,12 @@
         "id": "b-qOVV1X7_n2"
       },
       "source": [
-        "fake_seq_len = []\n",
+        "fake_seq_len = np.zeros(len(fake_sequences))\n",
         "for i in range(len(fake_sequences)):\n",
-        "  fake_seq_len.append(len(fake_sequences[i]))\n",
-        "fake_seq_len = np.asarray(fake_seq_len)\n",
+        "  fake_seq_len[i] = len(fake_sequences[i])\n",
         "fake_seq_len_orf_len_corrcoef = np.corrcoef(fake_seq_len, fake_max_orf_len[0])"
       ],
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -525,13 +484,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IBA-UEPgYCcK",
-        "outputId": "b617015f-efcf-4220-9da1-5f75f5b1d4d6"
+        "outputId": "8303a4ac-6231-409d-9f62-d262103175cd"
       },
       "source": [
         "x = kstest(two_mer_pc, \"norm\")\n",
         "print(x)"
       ],
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,25 +513,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8hWYWuiIeSqR"
-      },
-      "source": [
-        "data_set_names = ['mRNA', 'lncRNA', 'fake']"
-      ],
-      "execution_count": 16,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
         "id": "lrE3WojZPRMx",
-        "outputId": "bce5a90f-a887-4ea7-bac9-bd575e70152c"
+        "outputId": "2b3f55dc-880f-4dbd-ee89-b0fd5bc666bf"
       },
       "source": [
+        "data_set_names = ['mRNA', 'lncRNA', 'fake']\n",
+        "\n",
         "pg = PlotGenerator()\n",
         "pg.set_text_options(90, 'right', 0, 'center', 12)\n",
         "\n",
@@ -608,7 +558,7 @@
         "print('fake Sequence Length ORF Length Correlation Coefficient:')\n",
         "print('\\t', fake_seq_len_orf_len_corrcoef)"
       ],
-      "execution_count": 18,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "display_data",
