Comment the graph notebook.

--- a/Notebooks/Graph_100.ipynb
+++ b/Notebooks/Graph_100.ipynb
@@ -93,10 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Recursive DFS\n",
     "def list_paths_from(graph,this_path,all_paths):\n",
     "    this_node=this_path[-1]\n",
     "    for i in range(0,len(graph)):\n",
@@ -109,16 +110,19 @@
     "                all_paths.append(next_path)\n",
     "                all_paths = list_paths_from(graph,next_path,all_paths)\n",
     "    return all_paths\n",
+    "# Convert node names from ints to letters\n",
     "def get_path_name(one_path):\n",
     "    pname=''\n",
     "    for i in one_path:\n",
     "        pname = pname + NODES[i]\n",
     "    return pname\n",
+    "# Print a list of all paths\n",
     "def show_all_paths(paths):\n",
     "    c = 0\n",
     "    for p in paths:\n",
     "        c = c+1\n",
     "        print(c,get_path_name(p))\n",
+    "# Restrict a list based on last node\n",
     "def list_paths_a_to_b(graph,a,b):\n",
     "    paths_from_a = [[a]]\n",
     "    paths_from_a = list_paths_from(G,[a],paths_from_a)\n",
@@ -138,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
