Optimize sequence validation.

--- a/Notebooks/Analyzer_101.ipynb
+++ b/Notebooks/Analyzer_101.ipynb
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cMB8T39CuJ2Y",
-        "outputId": "6089d6b9-b40b-4e1f-f297-aa25addb2245"
+        "outputId": "1a9abc40-6d79-4bd0-8d34-555a713586b1"
       },
       "source": [
         "import numpy as np\n",
@@ -129,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "37JnfHgWt_-U",
-        "outputId": "6d114fd9-8d0c-4395-9d39-407536b1f2e2"
+        "outputId": "e8127dae-d99e-47df-bd3b-a91900564e5d"
       },
       "source": [
         "PC_FILENAME='gencode.v38.pc_transcripts.fa.gz'\n",
@@ -200,7 +200,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ANtZknso53FT",
-        "outputId": "44709775-7f80-40c2-ee9c-a54176f85e81"
+        "outputId": "8d1be837-f773-40b3-8bb5-fea05858ae63"
       },
       "source": [
         "if APPLY_SUBSET:\n",
@@ -250,7 +250,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D7pejW0g1lnR",
-        "outputId": "6446b0a0-fe3c-41e5-c9b2-cd14853eeff8"
+        "outputId": "f112d03b-097a-4dbe-e4ac-05e99638539a"
       },
       "source": [
         "pc_sequences = pcdf['sequence'].tolist()\n",
@@ -295,23 +295,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FYBUZyfxSRZs",
-        "outputId": "3a54af68-e34f-413f-ccd5-5495242ceec3"
+        "outputId": "e9d6571e-d631-4aa3-d327-c374338ad4f7"
       },
       "source": [
+        "def valid_sequence(seq):\n",
+        "  \"\"\"\n",
+        "  Checks if the given sequences if valid.\n",
+        "  \"\"\"\n",
+        "  for chr in seq:\n",
+        "      if not (chr == 'A' or chr == 'C' or chr == 'G' or chr == 'T'):\n",
+        "        return False\n",
+        "  return True\n",
+        "\n",
         "def validate_sequences(sequences):\n",
+        "  \"\"\"\n",
+        "  Validate the given list of sequences\n",
+        "  \"\"\"\n",
         "  i = 0\n",
         "  while i < len(sequences):\n",
-        "    seq = sequences[i]\n",
-        "    is_valid = True\n",
-        "    for chr in seq:\n",
-        "      if (chr == 'A' or chr == 'C' or chr == 'G' or chr == 'T') == False:\n",
-        "        is_valid = False\n",
-        "        break\n",
-        "    if is_valid:\n",
+        "    if valid_sequence(sequences[i]):\n",
         "      i += 1\n",
         "    else:\n",
-        "      i = 0\n",
-        "      sequences.remove(seq)\n",
+        "      sequences.remove(sequences[i])\n",
         "\n",
         "validate_sequences(pc_sequences)\n",
         "validate_sequences(nc_sequences)\n",
@@ -351,7 +356,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KuPgFeXI1npe",
-        "outputId": "d2e16597-4dd9-4fe7-bdd5-48de3753d7cf"
+        "outputId": "d06c897d-f860-4764-8a62-baebd0202c9b"
       },
       "source": [
         "NUM_FAKE_SEQS_PER_LENGTH = 10\n",
@@ -542,7 +547,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IBA-UEPgYCcK",
-        "outputId": "bcc2503d-529e-4a2f-aff1-79118466b370"
+        "outputId": "f79bd1a2-bfe5-4221-9822-f48a497b2e97"
       },
       "source": [
         "x = kstest(two_mer_pc, \"norm\")\n",
@@ -576,7 +581,7 @@
           "height": 1000
         },
         "id": "lrE3WojZPRMx",
-        "outputId": "ac112948-2f2d-4c89-ab81-57c563105616"
+        "outputId": "7cdfa1eb-4aca-4369-a8a0-6cb43858ddbe"
       },
       "source": [
         "data_set_names = ['mRNA', 'lncRNA', 'fake']\n",
