After K-mer freq bug fix, re-run on CoLab.

--- a/Notebooks/ORF_MLP_116.ipynb
+++ b/Notebooks/ORF_MLP_116.ipynb
@@ -58,9 +58,9 @@
     "INPUT_SHAPE=(None,84)  # 4^3 + 4^2 + 4^1\n",
     "NEURONS=128\n",
     "DROP_RATE=0.01\n",
-    "EPOCHS=500 # 1000 # 200\n",
+    "EPOCHS=100 # 1000 # 200\n",
     "SPLITS=5\n",
-    "FOLDS=1   # make this 5 for serious testing"
+    "FOLDS=5   # make this 5 for serious testing"
    ]
   },
   {
@@ -436,10 +436,9 @@
    "source": [
     "def seqs_to_kmer_freqs(seqs,max_K):\n",
     "    tool = KmerTools()  # from SimTools\n",
-    "    empty = tool.make_dict_upto_K(max_K)\n",
     "    collection = []\n",
     "    for seq in seqs:\n",
-    "        counts = empty\n",
+    "        counts = tool.make_dict_upto_K(max_K)\n",
     "        # Last param should be True when using Harvester.\n",
     "        counts = tool.update_count_one_K(counts,max_K,seq,True)\n",
     "        # Given counts for K=3, Harvester fills in counts for K=1,2.\n",
@@ -701,13 +700,7 @@
       "1/1 [==============================] - 0s 80ms/step - loss: 0.6647 - accuracy: 0.5833 - val_loss: 0.8058 - val_accuracy: 0.2500\n",
       "Epoch 57/500\n",
       "1/1 [==============================] - 0s 62ms/step - loss: 0.6634 - accuracy: 0.5833 - val_loss: 0.8037 - val_accuracy: 0.2500\n",
-      "Epoch 58/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 58/500\n",
       "1/1 [==============================] - 0s 75ms/step - loss: 0.6613 - accuracy: 0.5833 - val_loss: 0.8031 - val_accuracy: 0.2500\n",
       "Epoch 59/500\n",
       "1/1 [==============================] - 0s 78ms/step - loss: 0.6633 - accuracy: 0.5833 - val_loss: 0.8033 - val_accuracy: 0.2500\n",
@@ -1065,13 +1058,7 @@
       "1/1 [==============================] - 0s 145ms/step - loss: 0.4605 - accuracy: 0.7500 - val_loss: 0.9304 - val_accuracy: 0.2500\n",
       "Epoch 230/500\n",
       "1/1 [==============================] - 0s 37ms/step - loss: 0.5308 - accuracy: 0.8333 - val_loss: 0.9320 - val_accuracy: 0.2500\n",
-      "Epoch 231/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 231/500\n",
       "1/1 [==============================] - 0s 52ms/step - loss: 0.4988 - accuracy: 0.8333 - val_loss: 0.9355 - val_accuracy: 0.2500\n",
       "Epoch 232/500\n",
       "1/1 [==============================] - 0s 33ms/step - loss: 0.4720 - accuracy: 0.8333 - val_loss: 0.9481 - val_accuracy: 0.2500\n",
@@ -1429,13 +1416,7 @@
       "1/1 [==============================] - 0s 60ms/step - loss: 0.3345 - accuracy: 0.9167 - val_loss: 0.7236 - val_accuracy: 0.5000\n",
       "Epoch 403/500\n",
       "1/1 [==============================] - 0s 44ms/step - loss: 0.2843 - accuracy: 0.8333 - val_loss: 0.7713 - val_accuracy: 0.2500\n",
-      "Epoch 404/500\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 404/500\n",
       "1/1 [==============================] - 0s 66ms/step - loss: 0.3184 - accuracy: 0.8333 - val_loss: 0.8375 - val_accuracy: 0.2500\n",
       "Epoch 405/500\n",
       "1/1 [==============================] - 0s 77ms/step - loss: 0.3770 - accuracy: 0.8333 - val_loss: 0.8762 - val_accuracy: 0.2500\n",
