Wen CNN 102 ran on CoLab.

--- a/Notebooks/Wen_CNN_100.ipynb
+++ b/Notebooks/Wen_CNN_100.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "# Wen CNN \n",
     "\n",
-    "Simulate the CNN approach of Wen et al. 2019."
+    "Simulate the CNN approach of Wen et al. 2019.\n",
+    "\n",
+    "This was the first version that ran tom completion on trial data. The code needs improvement to remove hard-coded image size."
    ]
   },
   {
