Code clean up and optimizations.

--- a/Notebooks/Wen_CNN_200.ipynb
+++ b/Notebooks/Wen_CNN_200.ipynb
@@ -930,7 +930,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKZErkm5oFBA",
-        "outputId": "f4e7b84a-bdef-4e64-a125-6f976dc562fa"
+        "outputId": "e6756f00-b52f-431a-9421-911b196d0fe9"
       },
       "source": [
         "print(\"The protein coding test set...\")\n",
@@ -942,27 +942,15 @@
         "\n",
         "scores = model.evaluate(X, y, verbose=0)\n",
         "print(\"%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))\n",
-        "pc_bm_probs = model.predict(X)\n",
-        "print(\"First few scores...\")\n",
-        "print(pc_bm_probs[:5])\n",
-        "print(len(pc_bm_probs))\n",
-        "print(pc_bm_probs.shape)"
+        "pc_bm_probs = model.predict(X)"
       ],
-      "execution_count": 19,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "The protein coding test set...\n",
-            "accuracy: 86.50%\n",
-            "First few scores...\n",
-            "[[0.98272324]\n",
-            " [0.9986058 ]\n",
-            " [0.6508776 ]\n",
-            " [0.6616081 ]\n",
-            " [0.7329945 ]]\n",
-            "2000\n",
-            "(2000, 1)\n"
+            "accuracy: 86.50%\n"
           ],
           "name": "stdout"
         }
@@ -975,7 +963,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4f729b03-f54e-42f6-bd56-2d1ebef8ef79"
+        "outputId": "67fa5264-0430-48f9-936e-eb20f9b3a4ed"
       },
       "source": [
         "print(\"The non coding test set...\")\n",
@@ -987,27 +975,15 @@
         "\n",
         "scores = model.evaluate(X, y, verbose=0)\n",
         "print(\"%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))\n",
-        "nc_bm_probs = model.predict(X)\n",
-        "print(\"First few scores...\")\n",
-        "print(nc_bm_probs[:5])\n",
-        "print(len(nc_bm_probs))\n",
-        "print(nc_bm_probs.shape)"
+        "nc_bm_probs = model.predict(X)"
       ],
-      "execution_count": 20,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "The non coding test set...\n",
-            "accuracy: 12.65%\n",
-            "First few scores...\n",
-            "[[0.32705763]\n",
-            " [0.40750793]\n",
-            " [0.26546258]\n",
-            " [0.19260159]\n",
-            " [0.03720992]]\n",
-            "2000\n",
-            "(2000, 1)\n"
+            "accuracy: 12.65%\n"
           ],
           "name": "stdout"
         }
@@ -1020,7 +996,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1yjj57go7G4I",
-        "outputId": "d4e3b657-67e5-45c1-d7a1-21bad474d9ad"
+        "outputId": "5c56f07c-c4ef-4414-999e-758a429d159b"
       },
       "source": [
         "print(\"The sequences of interest...\")\n",
@@ -1034,22 +1010,15 @@
         "\n",
         "scores = model.evaluate(X, y, verbose=0)\n",
         "print(\"%s: %.2f%%\" % (model.metrics_names[1], scores[1]*100))\n",
-        "int_bm_probs = model.predict(X)\n",
-        "print(\"First few scores...\")\n",
-        "print(int_bm_probs[:5])"
+        "int_bm_probs = model.predict(X)"
       ],
-      "execution_count": 30,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "The sequences of interest...\n",
-            "accuracy: 75.00%\n",
-            "First few scores...\n",
-            "[[0.46364492]\n",
-            " [0.14791192]\n",
-            " [0.7745577 ]\n",
-            " [0.01361422]]\n"
+            "accuracy: 75.00%\n"
           ],
           "name": "stdout"
         }
@@ -1063,22 +1032,12 @@
           "height": 339
         },
         "id": "2TKZSHx69iEW",
-        "outputId": "9d6be469-bc92-4526-e079-8cebbb521cae"
+        "outputId": "8eb18814-bdb7-4242-8889-08e30fc0effd"
       },
       "source": [
-        "#temp bad fix for arrays\n",
-        "pc_probs = []\n",
-        "for pc_bm_prob in pc_bm_probs:\n",
-        "    pc_probs.append(pc_bm_prob[0])\n",
-        "pc_probs = np.asarray(pc_probs)\n",
-        "nc_probs = []\n",
-        "for nc_bm_prob in nc_bm_probs:\n",
-        "    nc_probs.append(nc_bm_prob[0])\n",
-        "nc_probs = np.asarray(nc_probs)\n",
-        "int_probs = []\n",
-        "for int_bm_prob in int_bm_probs:\n",
-        "    int_probs.append(int_bm_prob[0])\n",
-        "int_probs = np.asarray(int_probs)\n",
+        "pc_probs = np.asarray([e[0] for e in pc_bm_probs])\n",
+        "nc_probs = np.asarray([e[0] for e in nc_bm_probs])\n",
+        "int_probs = np.asarray([e[0] for e in int_bm_probs])\n",
         "\n",
         "pg = PlotGenerator()\n",
         "pg.set_text_options(90, 'right', 0, 'center', 12)\n",
@@ -1086,7 +1045,7 @@
         "\n",
         "pg.histogram([pc_probs, nc_probs, int_probs], 100)"
       ],
-      "execution_count": 39,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "display_data",
