Computed ORF probabilities.

--- a/Notebooks/Probability_101.ipynb
+++ b/Notebooks/Probability_101.ipynb
@@ -9,7 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-08-10 12:50:02 EDT\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "def show_time():\n",
+    "    t = time.time()\n",
+    "    print(time.strftime('%Y-%m-%d %H:%M:%S %Z', time.localtime(t)))\n",
+    "show_time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,61 +53,37 @@
     "    min_cds = math.ceil(rna_len/2)\n",
     "    min_amino = min_cds-2\n",
     "    max_start = math.floor(rna_len/2)\n",
-    "    if min_amino<1:\n",
-    "        return psum  # avoid end cases\n",
     "    for start_pos in range(1,max_start+1):\n",
     "        for stop_pos in range(start_pos+min_cds,rna_len+1):\n",
     "            num_pre = start_pos-1\n",
     "            num_amino = stop_pos-start_pos-1\n",
     "            pone = (P_NoStart**num_pre)*P_Start*(P_Amino**num_amino)*P_Stop\n",
     "            psum += pone\n",
-    "            print(\"%d-%d %f\"%(start_pos,stop_pos,pone))\n",
     "    return psum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-4 0.000665\n",
-      "1-5 0.000634\n",
-      "2-5 0.000655\n",
+      "For RNA len 1, prob(ORF)=0.000000\n",
+      "For RNA len 2, prob(ORF)=0.000732\n",
+      "For RNA len 3, prob(ORF)=0.000698\n",
+      "For RNA len 4, prob(ORF)=0.002051\n",
       "For RNA len 5, prob(ORF)=0.001955\n",
-      "1-4 0.000665\n",
-      "1-5 0.000634\n",
-      "1-6 0.000604\n",
-      "2-5 0.000655\n",
-      "2-6 0.000624\n",
-      "3-6 0.000645\n",
       "For RNA len 6, prob(ORF)=0.003828\n",
-      "1-5 0.000634\n",
-      "1-6 0.000604\n",
-      "1-7 0.000576\n",
-      "2-6 0.000624\n",
-      "2-7 0.000595\n",
-      "3-7 0.000615\n",
       "For RNA len 7, prob(ORF)=0.003649\n",
-      "1-5 0.000634\n",
-      "1-6 0.000604\n",
-      "1-7 0.000576\n",
-      "1-8 0.000549\n",
-      "2-6 0.000624\n",
-      "2-7 0.000595\n",
-      "2-8 0.000567\n",
-      "3-7 0.000615\n",
-      "3-8 0.000586\n",
-      "4-8 0.000605\n",
       "For RNA len 8, prob(ORF)=0.005955\n"
      ]
     }
    ],
    "source": [
-    "for i in [5,6,7,8]:\n",
+    "for i in [1,2,3,4,5,6,7,8]:\n",
     "    rna_len=i\n",
     "    porf = get_prob_by_sum(rna_len)\n",
     "    print(\"For RNA len %d, prob(ORF)=%f\"%(rna_len,porf))"
