Add summation formula for ORF probability.

--- a/Notebooks/Probability_101.ipynb
+++ b/Notebooks/Probability_101.ipynb
@@ -4,19 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Probability of an ORF"
+    "# Probability of an ORF\n",
+    "\n",
+    "For getting started, we'll solve a simple version.\n",
+    "Assume the RNA length is a multiple of 3.\n",
+    "Only count ORFs in frame 1.\n",
+    "Assume every codon is a random uniform selection from 64 choices.  \n",
+    "Solve one one exact length in codons.\n",
+    "Include every ORF of length >= codons/2. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-08-10 12:50:02 EDT\n"
+      "2021-08-10 14:08:49 EDT\n"
      ]
     }
    ],
@@ -29,8 +36,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let  \n",
+    "W = P(NonStart) = 63/64  \n",
+    "M = P(Start) = 1/64  \n",
+    "S = P(Stop) = 3/64  \n",
+    "A = P(NonStop)= 61/64  \n",
+    "C = P(AnyCodon) = 64/64\n",
+    "n = Length of RNA in bases.  \n",
+    "L = ORF length in codons (includes start, excludes stop)  \n",
+    "H = ceil(n/2)  \n",
+    "I = floor(n/2)  \n",
+    "Porf(n) = Probability of an ORF, L>=n/2.  \n",
+    "\n",
+    "$P_{orf}(n)=\\sum_{i=1}^I\\sum_{j=i}^L[(W^{i-1}MA^{j}S)]$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,37 +90,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "For RNA len 1, prob(ORF)=0.000000\n",
-      "For RNA len 2, prob(ORF)=0.000732\n",
-      "For RNA len 3, prob(ORF)=0.000698\n",
-      "For RNA len 4, prob(ORF)=0.002051\n",
-      "For RNA len 5, prob(ORF)=0.001955\n",
-      "For RNA len 6, prob(ORF)=0.003828\n",
-      "For RNA len 7, prob(ORF)=0.003649\n",
-      "For RNA len 8, prob(ORF)=0.005955\n"
+      "  RNA  CODONS  PROB\n",
+      "    3       1  0.00000\n",
+      "    6       2  0.00073\n",
+      "    9       3  0.00070\n",
+      "   12       4  0.00205\n",
+      "   15       5  0.00195\n",
+      "   18       6  0.00383\n",
+      "   21       7  0.00365\n",
+      "   24       8  0.00596\n",
+      "   27       9  0.00568\n",
+      "   30      10  0.00834\n"
      ]
     }
    ],
    "source": [
-    "for i in [1,2,3,4,5,6,7,8]:\n",
-    "    rna_len=i\n",
-    "    porf = get_prob_by_sum(rna_len)\n",
-    "    print(\"For RNA len %d, prob(ORF)=%f\"%(rna_len,porf))"
+    "print(\"  RNA  CODONS  PROB\")\n",
+    "for c in range(1,11,1):\n",
+    "    rna_codons=c\n",
+    "    rna_len=rna_codons*3\n",
+    "    porf = get_prob_by_sum(rna_codons)\n",
+    "    print(\"%5d  %6d  %.5f\"%(rna_len,rna_codons,porf))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  RNA  CODONS  PROB\n",
+      "   99      33  3.40404e-02\n",
+      "  198      66  4.72581e-02\n",
+      "  297      99  3.45162e-02\n",
+      "  396     132  2.19696e-02\n",
+      "  495     165  1.17732e-02\n",
+      "  594     198  6.27716e-03\n",
+      "  693     231  3.04329e-03\n",
+      "  792     264  1.51496e-03\n",
+      "  891     297  7.03198e-04\n",
+      "  990     330  3.38947e-04\n",
+      " 1089     363  1.53960e-04\n",
+      " 1188     396  7.29797e-05\n",
+      " 1287     429  3.27679e-05\n",
+      " 1386     462  1.53909e-05\n",
+      " 1485     495  6.86598e-06\n",
+      " 1584     528  3.20822e-06\n",
+      " 1683     561  1.42591e-06\n",
+      " 1782     594  6.64280e-07\n",
+      " 1881     627  2.94608e-07\n",
+      " 1980     660  1.37007e-07\n",
+      " 2079     693  6.06855e-08\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"  RNA  CODONS  PROB\")\n",
+    "for c in range(33,700,33):\n",
+    "    rna_codons=c\n",
+    "    rna_len=rna_codons*3\n",
+    "    porf = get_prob_by_sum(rna_codons)\n",
+    "    print(\"%5d  %6d  %.5e\"%(rna_len,rna_codons,porf))"
+   ]
   },
   {
    "cell_type": "code",
