Using new TensorFlow on Mac preparing for Alien.

--- a/Notebooks/Probability_101.ipynb
+++ b/Notebooks/Probability_101.ipynb
@@ -44,14 +44,14 @@
     "M = P(Start) = 1/64  \n",
     "S = P(Stop) = 3/64  \n",
     "A = P(NonStop)= 61/64  \n",
-    "C = P(AnyCodon) = 64/64\n",
+    "C = P(AnyCodon) = 64/64  \n",
     "n = Length of RNA in bases.  \n",
     "L = ORF length in codons (includes start, excludes stop)  \n",
     "H = ceil(n/2)  \n",
     "I = floor(n/2)  \n",
     "Porf(n) = Probability of an ORF, L>=n/2.  \n",
     "\n",
-    "$P_{orf}(n)=\\sum_{i=1}^I\\sum_{j=i}^L[(W^{i-1}MA^{j}S)]$"
+    "$P_{orf}(n)=\\sum_{i=1}^I\\sum_{j=i}^L[W^{i-1}MA^{j}S]$"
    ]
   },
   {
