Run on Alien with libcudnn

--- a/Notebooks/ORF_CNN_133.alien.ipynb
+++ b/Notebooks/ORF_CNN_133.alien.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "# ORF recognition by CNN\n",
     "\n",
-    "Use variable number of bases between START and STOP. Thus, ncRNA will have its STOP out-of-frame or too close to the START, and pcRNA will have its STOP in-frame and far from the START."
+    "First run on Alien."
    ]
   },
   {
@@ -593,13 +593,7 @@
       "417/417 [==============================] - 1s 1ms/step - loss: 0.0940 - accuracy: 0.9675 - val_loss: 0.2914 - val_accuracy: 0.8904\n",
       "Epoch 51/100\n",
       "417/417 [==============================] - 1s 1ms/step - loss: 0.0907 - accuracy: 0.9724 - val_loss: 0.2998 - val_accuracy: 0.8914\n",
-      "Epoch 52/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 52/100\n",
       "417/417 [==============================] - 1s 1ms/step - loss: 0.0940 - accuracy: 0.9691 - val_loss: 0.2939 - val_accuracy: 0.8949\n",
       "Epoch 53/100\n",
       "417/417 [==============================] - 1s 1ms/step - loss: 0.0897 - accuracy: 0.9719 - val_loss: 0.2984 - val_accuracy: 0.8952\n",
@@ -838,13 +832,7 @@
       "417/417 [==============================] - 1s 2ms/step - loss: 0.0925 - accuracy: 0.9700 - val_loss: 0.2910 - val_accuracy: 0.8974\n",
       "Epoch 54/100\n",
       "417/417 [==============================] - 2s 4ms/step - loss: 0.0919 - accuracy: 0.9681 - val_loss: 0.2874 - val_accuracy: 0.8998\n",
-      "Epoch 55/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 55/100\n",
       "417/417 [==============================] - 1s 1ms/step - loss: 0.0954 - accuracy: 0.9693 - val_loss: 0.2784 - val_accuracy: 0.9003\n",
       "Epoch 56/100\n",
       "417/417 [==============================] - 1s 1ms/step - loss: 0.0829 - accuracy: 0.9730 - val_loss: 0.2990 - val_accuracy: 0.8962\n",
