Ran on Alien with libcudnn8.

--- a/Notebooks/Wen_CNN_106.alien.ipynb
+++ b/Notebooks/Wen_CNN_106.alien.ipynb
@@ -8,9 +8,7 @@
    "source": [
     "# Wen CNN \n",
     "\n",
-    "Simulate the CNN approach of Wen et al. 2019.\n",
-    "\n",
-    "Notebook 101 ran to completion on PC. Now run more epochs on CoLab."
+    "First run on Alien."
    ]
   },
   {
@@ -994,13 +992,7 @@
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2613 - accuracy: 0.8902 - val_loss: 0.3000 - val_accuracy: 0.8766\n",
       "Epoch 56/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2591 - accuracy: 0.8887 - val_loss: 0.3021 - val_accuracy: 0.8784\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2599 - accuracy: 0.8891 - val_loss: 0.2940 - val_accuracy: 0.8803\n",
       "Epoch 58/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2505 - accuracy: 0.8959 - val_loss: 0.2924 - val_accuracy: 0.8772\n",
@@ -1232,13 +1224,7 @@
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2686 - accuracy: 0.8860 - val_loss: 0.2792 - val_accuracy: 0.8838\n",
       "Epoch 56/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2717 - accuracy: 0.8861 - val_loss: 0.2745 - val_accuracy: 0.8838\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2847 - accuracy: 0.8749 - val_loss: 0.2775 - val_accuracy: 0.8813\n",
       "Epoch 58/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2722 - accuracy: 0.8864 - val_loss: 0.2777 - val_accuracy: 0.8838\n",
@@ -1464,13 +1450,7 @@
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2662 - accuracy: 0.8886 - val_loss: 0.2892 - val_accuracy: 0.8794\n",
       "Epoch 56/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2638 - accuracy: 0.8868 - val_loss: 0.2934 - val_accuracy: 0.8772\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2551 - accuracy: 0.8883 - val_loss: 0.2957 - val_accuracy: 0.8803\n",
       "Epoch 58/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2595 - accuracy: 0.8901 - val_loss: 0.2872 - val_accuracy: 0.8831\n",
@@ -1693,13 +1673,7 @@
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2747 - accuracy: 0.8816 - val_loss: 0.2616 - val_accuracy: 0.8906\n",
       "Epoch 56/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2654 - accuracy: 0.8863 - val_loss: 0.2673 - val_accuracy: 0.8878\n",
-      "Epoch 57/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 57/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2607 - accuracy: 0.8883 - val_loss: 0.2623 - val_accuracy: 0.8891\n",
       "Epoch 58/100\n",
       "400/400 [==============================] - 2s 4ms/step - loss: 0.2537 - accuracy: 0.8957 - val_loss: 0.2612 - val_accuracy: 0.8956\n",
