Jas 301 ran on Alien.

--- a/Notebooks/Jas_300_Sim_MLP.ipynb
+++ b/Notebooks/Jas_300_Sim_MLP.ipynb
@@ -10,7 +10,8 @@
     "Start with ORF_MLP_118 which had the simulator bug fix.  \n",
     "Evaluate MLP that is wide and deep.  \n",
     "Train on copious simulated data.  \n",
-    "Use uniform but realistic RNA lengths.  "
+    "Use uniform but realistic RNA lengths.  \n",
+    "74% accuracy.  "
    ]
   },
   {
