Running Jas 303 on Alien.

--- a/Notebooks/Jas_301_Sim_MLP.ipynb
+++ b/Notebooks/Jas_301_Sim_MLP.ipynb
@@ -10,7 +10,8 @@
     "Start with ORF_MLP_118 which had the simulator bug fix.  \n",
     "Evaluate MLP with fewer neurons.  \n",
     "Train on copious simulated data.  \n",
-    "Use uniform but realistic RNA lengths.  "
+    "Use uniform but realistic RNA lengths.  \n",
+    "Similar 74% accuracy."
    ]
   },
   {
@@ -772,13 +773,7 @@
       "Epoch 44/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.5815 - accuracy: 0.6933 - val_loss: 0.5469 - val_accuracy: 0.7257\n",
       "INFO:tensorflow:Assets written to: data/BestModel/assets\n",
-      "Epoch 45/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 45/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.5776 - accuracy: 0.6982 - val_loss: 0.5451 - val_accuracy: 0.7256\n",
       "Epoch 46/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.5764 - accuracy: 0.6991 - val_loss: 0.5482 - val_accuracy: 0.7250\n",
@@ -1821,13 +1816,7 @@
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.5550 - accuracy: 0.7160 - val_loss: 0.5310 - val_accuracy: 0.7349\n",
       "Epoch 111/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.5563 - accuracy: 0.7156 - val_loss: 0.5298 - val_accuracy: 0.7350\n",
-      "Epoch 112/200\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 112/200\n",
       "2084/2084 [==============================] - 3s 1ms/step - loss: 0.5548 - accuracy: 0.7163 - val_loss: 0.5289 - val_accuracy: 0.7354\n",
       "INFO:tensorflow:Assets written to: data/BestModel/assets\n",
       "Epoch 113/200\n",
